Document XMage for iPad architecture and history